Scroll Fix
Scrollbar fix

--- a/backend/static/backend.css
+++ b/backend/static/backend.css
@@ -89,14 +89,16 @@ a {
     cursor: pointer;
 }
 
-.panel.panel-default{
-    overflow: auto;
+/*.panel.panel-default{*/
+    /*overflow: auto;*/
+/*}*/
+
+.listed-items{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 70vh;
 }
 
-.panel.panel-default.search-wrapper {
-    overflow: none;
-}
-
-.panel.panel-default.listed-items {
-    overflow: scroll;
-}
+/*.panel.panel-default.listed-items {*/
+    /*overflow: scroll;*/
+/*}*/
